# xsd-diagram-mcp

./: README.md  pyproject.toml
examples/purchase/: generate_doc.py  purchase.xsd  purchase_doc.html
src/xsd_diagram_mcp/: __init__.py  server.py
tests/: conftest.py  test_error_handling.py  test_lang_support.py  test_list_elements.py  test_mcp_integration.py  test_parse_xsd.py  test_render_diagram.py  test_render_overview.py  test_smoke.py
tests/fixtures/: xsd_samples.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: config.ts  constants.ts  extension.ts  pythonSetup.ts
