[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xsd-diagram-mcp"
version = "0.1.0"
description = "MCP server for XSD schema visualization — generates SVG diagrams in Altova XMLSpy notation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "xsd",
    "xml",
    "schema",
    "diagram",
    "mcp",
    "model-context-protocol",
    "visualization",
    "svg",
    "xmlspy",
    "claude",
    "copilot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xsd-viewer-core @ git+https://github.com/dborozdin/xsd_viewer.git",
    "fastmcp>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
xsd-diagram-mcp = "xsd_diagram_mcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
